<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.VerifyPhoneNo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/splash_screen"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_phone_no"
            android:textAlignment="center"
            android:textSize="30sp"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_verification_code_if_not_automatically_authenticated"
            android:textAlignment="center"
            android:textSize="14sp"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:orientation="vertical"
            android:padding="50dp">

            <EditText
                android:hint="@string/enter_otp"
                android:id="@+id/verification_code_entered_by_user"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:autofillHints="@string/enter_otp"
                android:inputType="number" />

            <Button
                android:background="#fece2f"
                android:id="@+id/verify_btn"
                android:onClick="btnVerifyPhoneNoOnClick"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:text="@string/verify" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content" />
        </LinearLayout>
    </LinearLayout>




</ScrollView>