<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        android:transitionName="cardView_tran"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circle"
                    android:contentDescription="@string/todo"
                    android:padding="10dp"
                    android:src="@drawable/log_in_page_logo"
                    android:tint="@color/white"
                    android:transitionName="login_image"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/txtLogIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/loginPageLogo"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:transitionName="login_text"
                    tools:targetApi="lollipop" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-15dp"
                android:contentDescription="@string/todo"
                android:rotation="45"
                android:src="@drawable/square"
                android:transitionName="triangle_tran"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTxtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/username"
                    android:transitionName="userName_tran"
                    tools:targetApi="lollipop">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayOut3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editTxtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true"
                    android:transitionName="password_tran"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    tools:targetApi="lollipop">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativeLayOut3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/LinearLayOut3"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <CheckBox
                    android:id="@+id/checkboxRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/remember_me"
                    android:textColor="@color/textColor"
                    android:transitionName="rememberMe"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/textColor"
                    android:textSize="13sp"
                    android:transitionName="forgotPassword_tran"
                    tools:targetApi="lollipop" />

            </RelativeLayout>

            <Button
                android:id="@+id/signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayOut3"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-medium"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:onClick="btnSignInOnClick"
                android:transitionName="signIn_tran"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/signIn"
                android:background="@color/transparent"
                android:text="@string/dont_have_an_account_sign_up"
                android:textSize="12sp"
                android:onClick="btnRegisterOnClick"
                android:transitionName="btnSignUp"
                tools:targetApi="lollipop" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</ScrollView>